# aura

./: .appveyor.yml  .clang-format  .gitignore  .lvimrc  .travis.yml  CMakeLists.txt  Jamroot  LICENSE.md  README.md  _vimrc_local.vim  appveyor.yml  conanfile.py  conanfile.txt  example.cpp  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.py
.buildkite/: build.sh  pipeline.yml
alang/: .python-version
alang/web/: web.py
alang/web/templates/: index.html
bench/: CMakeLists.txt  backend.cl  backend.cpp  backend.cu  fft.cpp  fftcpu.cpp  micro.cl  micro.cpp  micro.cu  overlap.cpp  overlap.cu  peak.cc  peak.cpp  zerocpy.cc  zerocpy.cpp
bench/fft/: fftw.hpp
buildprocess/: build.sh  build_and_test_target.sh  clang-format.sh
cmake/: FindFFTW.cmake  FindOpenCL.cmake  FindclBLAS.cmake  FindclFFT.cmake  functions.cmake
doc/: Doxyfile  Doxyfile.in  Jamfile.v2  astyle.txt  aura.qbk  backend.txt  backend_cuda.txt  backend_opencl.txt  bench.txt  defines.txt  device_and_feed.txt  events.txt  fft.txt  fftbench.txt  get_started.qbk  guidelines.txt  guidlines.txt  index.rst  kernel.txt  multidevice.md  nomenclature.txt  overview.qbk  pinnedmem.txt  pipes.txt  reference.qbk  todo.txt  vector.txt  zerocopy.md
doc/source/: conf.py  conf.py.in  index.rst
examples/: CMakeLists.txt  coo_pingpong.cpp  fft.cpp  fft2.cpp  reduce.cc  reduce.cpp
experiment/: .context_opencl.cpp.swp  CMakeLists.txt  atomic_cfloat.cpp  bughunt.cpp  context_opencl.cpp  fft_2d_1d.cpp  fftsweep_cuda.cpp  ftrftr.cpp  future.cpp  index.cpp  namespace_alias.cpp  oclpinning.cpp  ocltexture.cpp  opencl_kernel_leak.cpp  overlap.cpp  overlap.cu  overloadtc.cpp  pointerraii.cpp  ppconcat.cpp  slice.cpp  vec_vs_vla.cpp  view.cpp  viewv2.cpp
experiment/matlab/: benchfft.m  build.m  buildmexexample.m  gpufft.cpp  kernel.cu  mexexample.cpp  mexexample_kernel.cc  nullptr.hpp  performancetest.m  testmexexample.m
include/aura/: aura.hpp  backend.hpp  bounds.hpp  config.hpp  config.hpp.template  copy.hpp  device.hpp  device_array.hpp  device_buffer.hpp  device_map.hpp  device_view.hpp  dim_t.hpp  environment.hpp  error.hpp  fft.hpp  host_allocator.hpp  stream.hpp
include/aura/backend/cuda/: args.hpp  block.hpp  bundle.hpp  call.hpp  context.hpp  device.hpp  device_ptr.hpp  feed.hpp  fft.hpp  grid.hpp  init.hpp  invoke.hpp  kernel.hpp  kernel_helper.hpp  mark.hpp  memory.hpp  mesh.hpp  module.hpp  p2p.hpp  stream.hpp
include/aura/backend/cuda/detail/: feed_marker_helper.hpp  host_allocator.hpp
include/aura/backend/opencl/: args.hpp  block.hpp  bundle.hpp  call.hpp  context.hpp  device.hpp  device_ptr.hpp  feed.hpp  fft.hpp  grid.hpp  init.hpp  invoke.hpp  kernel.hpp  kernel_helper.hpp  mark.hpp  memory.hpp  mesh.hpp  module.hpp  stream.hpp
include/aura/backend/opencl/detail/: feed_marker_helper.hpp  host_allocator.hpp
include/aura/backend/shared/: args.hpp  block.hpp  calc_mesh_bundle.hpp  call.hpp  device_info.hpp  grid.hpp  memory_tag.hpp
include/aura/detail/: addressof.hpp  dim_base.hpp  host_allocator_traits.hpp  size.hpp  svec.hpp
include/aura/misc/: benchmark.hpp  coo.hpp  cprofile.h  now.hpp  profile.hpp  profile_svg.hpp  sequence.hpp
include/boost/aura/: alang.hpp  aura.hpp  backend.hpp  blas.hpp  bounds.hpp  check.hpp  config.hpp  copy.hpp  device.hpp  device_allocator.hpp  device_array.hpp  device_buffer.hpp  device_lock.hpp  device_map.hpp  device_pool_allocator.hpp  device_ptr.hpp  device_range.hpp  device_view.hpp  environment.hpp  error.hpp  feed.hpp  fft.hpp  host_allocator.hpp  index.hpp  invoke.hpp  io.hpp  kernel.hpp  library.hpp  mesh_bundle.hpp  platform.hpp  preprocessor.hpp  slice.hpp  utility.hpp
include/boost/aura/base/: alang.hpp  allocation_tracker.hpp  base_device_ptr.hpp  base_mesh_bundle.hpp  check_initialized.hpp
include/boost/aura/bounds/: product.hpp  tiny_vector.hpp
include/boost/aura/detail/: addressof.hpp  host_allocator_traits.hpp  memory_tag.hpp  size.hpp  svec.hpp
include/boost/aura/ext/: fftw.hpp
include/boost/aura/math/: add.hpp  add_kernel.hpp  complex.hpp  math.hpp  memset_ones.hpp  memset_zero.hpp  memset_zero_float.cc  norm2.hpp  norm2_kernels.cpp  partition_mesh.hpp  reduced_sum_kernel.hpp  split_interleaved.hpp  split_interleaved_i2s.cc
include/boost/aura/meta/: traits.hpp  tsizeof.hpp
include/boost/aura/misc/: benchmark.hpp  coo.hpp  cprofile.h  deprecate.hpp  matlab.hpp  now.hpp  profile.hpp  profile_svg.hpp  sequence.hpp
parser/: experiment.py
python/: CMakeLists.txt  aura.cpp  aura.i  aura_opencl.cpp  pyaura.cpp
python/aura/: preprocessor.py
python/aura/test/: test_preprocessor.py
source/misc/: cprofile.cpp  profile.html
test/: CMakeLists.txt  alang.cpp  basic.cpp  copy.cpp  device.cpp  device_allocator.cpp  device_array.cpp  device_buffer.cpp  device_lock.cpp  device_memory_map.cpp  device_ptr.cpp  device_range.cpp  feed.cpp  inlinefunctions.cpp  inlinefunctions2.cpp  invoke.cpp  io.cpp  io.txt  kernels.al  library.cpp  multi_comp_units1.cpp  multi_comp_units2.cpp  preprocessor.cpp  test.hpp  tiny_vector.cpp  usingdirective.cpp
test/backend/: basic.cpp  complex.cc  complex.cpp  device_info.cpp  device_ptr.cpp  factorize.cpp  feed.cpp  fft.cpp  host_allocator.cpp  host_memory.cpp  kernel.cc  kernel.cl  kernel.cpp  kernel.cu  library.cpp  map.cc  map.cpp  mark.cpp  p2p.cpp
test/detail/: dim_base.cpp  svec.cpp
test/math/: CMakeLists.txt  add.cpp  blas.cpp  fft.cpp  fft_data.hpp  fft_fftw.cpp  fft_host.cpp  generate.py  norm2.cpp  partition_mesh.cpp  split_interleaved.cpp
test/math/basic/: add.cpp  conj.cpp  div.cpp  fma.cpp  mul.cpp  sub.cpp
test/math/blas/: axpy.cpp  dot.cpp  norm2.cpp
test/math/special/: ndmul.cpp  reduced_sum.cpp
test/misc/: coo.cpp  cprofile.c  profile.cpp  sequence.cpp
thoughts/: auralang.md  backend.txt  channel.md  complex.md  const.md  device_and_feed.txt  device_info.txt  deviceselection.md  feed.txt  joelinput.md  memaccfuncs.md  nomenclature.txt  refactor.md  requirements.txt  todo.txt  types.txt  vector.txt
tools/: gen_invoker.py  generate_kernel.py  linux_build.mk
(+95 files in other folders)
