CMAKE_POLICY(SET CMP0004 OLD)

FIND_PACKAGE(SWIG)
FIND_PACKAGE(PYTHONLIBS)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(aura.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(aura.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(aura python aura.i)
SWIG_LINK_LIBRARIES(aura ${PYTHON_LIBRARIES})
